[gd_scene load_steps=20 format=3 uid="uid://b4i5vjcxw1ro2"]

[ext_resource type="Script" path="res://Scripts/Enemies/charger.gd" id="1_5p8ul"]
[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="1_qvipm"]
[ext_resource type="Script" path="res://Scripts/Components/resists.gd" id="2_8a3r7"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox_component.gd" id="3_46l5a"]
[ext_resource type="Script" path="res://Scripts/Components/attack.gd" id="4_ool1e"]
[ext_resource type="Script" path="res://Scripts/Components/health_component.gd" id="5_vh5re"]
[ext_resource type="Script" path="res://Scripts/Components/knockback_component.gd" id="6_176dn"]
[ext_resource type="Script" path="res://Scripts/Components/enemy_death_component.gd" id="7_0p6hw"]
[ext_resource type="Script" path="res://Scripts/Components/drop_spawner.gd" id="8_b2gc4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="9_ost3e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="10_0jit8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="11_fk7dm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="12_bcmwt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w2axu"]
radius = 6.0

[sub_resource type="Resource" id="Resource_i1yqa"]
script = ExtResource("2_8a3r7")
armor = 0.0
coefficient_of_knockback = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e86o1"]
radius = 8.0

[sub_resource type="Resource" id="Resource_l6r3i"]
script = ExtResource("4_ool1e")
attack_damage = 1.0
knockback_force = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pchbb"]
size = Vector2(11, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_bsxj1"]
radius = 6.0

[node name="Charger" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_5p8ul")

[node name="GeometryCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w2axu")

[node name="VISUALS" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="VISUALS"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-5, -6, 5, -6, 8, 0, 5, 6, -5, 6, -8, 0)

[node name="COMBAT" type="Node2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="COMBAT" node_paths=PackedStringArray("health_component", "knockback_component", "knockback_target", "timer")]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_qvipm")
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")
resists = SubResource("Resource_i1yqa")
knockback_target = NodePath("../..")
timer = NodePath("InvincibilityTimer")

[node name="InvincibilityTimer" type="Timer" parent="COMBAT/HitboxComponent"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="HitboxCollider" type="CollisionShape2D" parent="COMBAT/HitboxComponent"]
shape = SubResource("CircleShape2D_e86o1")
debug_color = Color(0.964706, 0, 0.498039, 0.419608)

[node name="HurtBox" type="Area2D" parent="COMBAT" node_paths=PackedStringArray("knockback_origin")]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_46l5a")
attack = SubResource("Resource_l6r3i")
active = false
knockback_origin = NodePath("../..")

[node name="HurtboxCollider" type="CollisionShape2D" parent="COMBAT/HurtBox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_pchbb")
debug_color = Color(0.956863, 0, 0.529412, 0.419608)

[node name="HealthComponent" type="Node" parent="COMBAT"]
script = ExtResource("5_vh5re")
max_health = 3.0

[node name="KnockbackComponent" type="Node" parent="COMBAT" node_paths=PackedStringArray("target")]
script = ExtResource("6_176dn")
target = NodePath("../..")

[node name="EnemyDeathComponent" type="Node" parent="COMBAT" node_paths=PackedStringArray("health_component", "target", "drop_spawner")]
script = ExtResource("7_0p6hw")
health_component = NodePath("../HealthComponent")
target = NodePath("../..")
drop_spawner = NodePath("../DropSpawner")

[node name="DropSpawner" type="Node2D" parent="COMBAT"]
script = ExtResource("8_b2gc4")
min_drops = 2
max_drops = 4
drop_velocity = 512

[node name="StateChart" type="Node" parent="."]
script = ExtResource("9_ost3e")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("10_0jit8")
initial_state = NodePath("Pursuit")

[node name="Pursuit" type="Node" parent="StateChart/Root"]
script = ExtResource("11_fk7dm")

[node name="To Attack" type="Node" parent="StateChart/Root/Pursuit"]
script = ExtResource("12_bcmwt")
to = NodePath("../../Attack")
event = &"see_the_player"

[node name="Attack" type="Node" parent="StateChart/Root"]
script = ExtResource("11_fk7dm")

[node name="To Rest" type="Node" parent="StateChart/Root/Attack"]
script = ExtResource("12_bcmwt")
to = NodePath("../../Rest")
event = &"atk_to_rest"

[node name="Rest" type="Node" parent="StateChart/Root"]
script = ExtResource("11_fk7dm")

[node name="To Pursuit" type="Node" parent="StateChart/Root/Rest"]
script = ExtResource("12_bcmwt")
to = NodePath("../../Pursuit")
delay_seconds = 1.0

[node name="MOTION" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MOTION"]
avoidance_enabled = true
radius = 8.0

[node name="Timer" type="Timer" parent="MOTION"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="SightLine" type="RayCast2D" parent="MOTION"]
target_position = Vector2(500, 0)

[node name="FrontCollisionDetector" type="Area2D" parent="MOTION"]
collision_layer = 0

[node name="FrontCollisionCollider" type="CollisionShape2D" parent="MOTION/FrontCollisionDetector"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_bsxj1")

[connection signal="hit_is_applied" from="COMBAT/HurtBox" to="." method="_on_hurt_box_hit_is_applied"]
[connection signal="state_entered" from="StateChart/Root/Pursuit" to="." method="_on_pursuit_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Pursuit" to="." method="_on_pursuit_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Attack" to="." method="_on_attack_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Rest" to="." method="_on_rest_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Rest" to="." method="_on_rest_state_physics_processing"]
[connection signal="velocity_computed" from="MOTION/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="MOTION/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="MOTION/FrontCollisionDetector" to="." method="_on_front_collision_detector_body_entered"]
